// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<MenuItem /> renders a MenuItem properly 1`] = `
.emotion-4 {
  box-sizing: border-box;
  height: 40px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #25272D;
  padding: 0 1rem;
}

.emotion-4:hover {
  background: #F8F9F9;
}

.emotion-4:active {
  background: #F2F2F2;
}

.emotion-4:focus {
  background: #F8F9F9;
}

.emotion-0 {
  color: grey;
  font-size: 16px;
  margin-right: 0.75rem;
}

.emotion-2 {
  font-family: Motiva Sans;
  font-size: 0.875rem;
}

<div
  aria-selected={false}
  className="emotion-4 emotion-5"
  height="40px"
  onClick={[Function]}
  onKeyPress={[Function]}
  role="Menuitem"
  selected={false}
>
  <input
    css={
      Object {
        "border": "0",
        "clip": "rect(0 0 0 0)",
        "clipPath": "inset(50%)",
        "height": "1px",
        "margin": "-1px",
        "overflow": "hidden",
        "padding": "0",
        "position": "absolute",
        "whiteSpace": "nowrap",
        "width": "1px",
      }
    }
    id="menu-item_clearance_state_ready_to_clear"
    name="clearance_state"
    type="hidden"
    value="ready_to_clear"
  />
  <i
    className="ar ar-status emotion-0 emotion-1"
    color="grey"
    fontSize="16px"
  />
  <span
    className="emotion-2 emotion-3"
    fontSize="size2"
  >
    Ready to Clear
  </span>
</div>
`;

exports[`<MenuItem /> renders a selected MenuItem properly 1`] = `
.emotion-0 {
  color: grey;
  font-size: 16px;
  margin-right: 0.75rem;
}

.emotion-2 {
  font-family: Motiva Sans;
  font-size: 0.875rem;
}

.emotion-4 {
  box-sizing: border-box;
  height: 40px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #25272D;
  padding: 0 1rem;
  color: #0F0F10;
  font-weight: 700;
  padding-right: 0.5rem;
}

.emotion-4:hover {
  background: #F8F9F9;
}

.emotion-4:active {
  background: #F2F2F2;
}

.emotion-4:focus {
  background: #F8F9F9;
}

<div
  aria-selected={true}
  className="emotion-4 emotion-5"
  height="40px"
  onClick={[Function]}
  onKeyPress={[Function]}
  role="Menuitem"
  selected={true}
>
  <input
    css={
      Object {
        "border": "0",
        "clip": "rect(0 0 0 0)",
        "clipPath": "inset(50%)",
        "height": "1px",
        "margin": "-1px",
        "overflow": "hidden",
        "padding": "0",
        "position": "absolute",
        "whiteSpace": "nowrap",
        "width": "1px",
      }
    }
    id="menu-item_clearance_state_ready_to_clear"
    name="clearance_state"
    type="hidden"
    value="ready_to_clear"
  />
  <i
    className="ar ar-status emotion-0 emotion-1"
    color="grey"
    fontSize="16px"
  />
  <span
    className="emotion-2 emotion-3"
    fontSize="size2"
  >
    Ready to Clear
  </span>
</div>
`;
